# TSP_SA

./: CMakeLists.txt  README.md
sourceFiles/: ftv47.atsp  internetExmpl1.txt  rbg403.atsp  test.txt
src/: CMakeLists.txt  MemoryChecker.cpp  MemoryChecker.h  Menu.h  Reader.cpp  Reader.h  Result.h  Solver.cpp  Solver.h  SourceFileGenerator.cpp  SourceFileGenerator.h  Status.h  StatusHelper.h  Timer.cpp  Timer.h  main.cpp
tests/: CMakeLists.txt  example.cc  internetExamples.cc  mierzwa.cc
